GB-11: Add Image for Trainer & Gym entity